<resources>
    <string name="app_name">airplane-android</string>
    <string name="company">AirlineCompany</string>
    <string name="main_home">Trang chủ</string>
    <string name="main_user">Tài khoản</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="username">Tên người dùng</string>
    <string name="birthday">Ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="phone">Số điện thoại</string>
    <string name="identifier">CMND/CCCD</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="txt_continue">Tiếp</string>
    <string name="txt_update">Cập nhật</string>
    <string name="no_account">Chưa có tài khoản? Đăng ký</string>
    <string name="has_account">Đã có tài khoản? Đăng nhập</string>
    <string name="forgot_pass">Quên mật khẩu?</string>
    <string name="reset_pass">Đặt lại mật khẩu</string>
    <string name="update_user_title">Cập nhật thông tin tài khoản</string>
    <string name="update_user_sub_title">Xem và tuỳ chỉnh thông tin cá nhân</string>
    <string name="change_pass_title">Đổi mật khẩu</string>
    <string name="change_pass_sub_title">Thay đổi mật khẩu mới</string>
    <string name="log_out_title">Đăng xuất</string>
    <string name="log_in_sign_up_slogan">Đăng ký thành viên, hưởng nhiều ưu đãi</string>
    <string name="log_in_sign_up_btn">Đăng nhập/ Đăng ký</string>
    <string name="old_pass">Mật khẩu cũ</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="re_new_pass">Nhập lại mật khẩu mới</string>
</resources>