<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/inactive"
    tools:context=".UpdateUserInfoActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailContainer"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:layout_marginTop="25dp"
        app:startIconDrawable="@drawable/ic_user"
        app:startIconTint="@color/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp"
            android:textSize="16sp"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameContainer"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:layout_marginTop="25dp"
        app:startIconDrawable="@drawable/ic_user"
        app:startIconTint="@color/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp"
            android:textSize="16sp"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/genderContainer"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/gender"
        android:layout_marginTop="25dp"
        app:startIconDrawable="@drawable/ic_gender"
        app:startIconTint="@color/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/genderInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp"
            android:textSize="16sp"
            android:inputType="none"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneContainer"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/phone"
        android:layout_marginTop="25dp"
        app:startIconDrawable="@drawable/ic_phone"
        app:startIconTint="@color/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp"
            android:textSize="16sp"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthContainer"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/birthday"
        android:layout_marginTop="25dp"
        app:startIconDrawable="@drawable/ic_calendar"
        app:startIconTint="@color/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp"
            android:textSize="16sp"
            android:clickable="false"
            android:focusable="false"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idContainer"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/identifier"
        android:layout_marginTop="25dp"
        app:startIconDrawable="@drawable/ic_id_card"
        app:startIconTint="@color/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp"
            android:textSize="16sp"
            android:clickable="false"
            android:focusable="false"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/txt_update"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>