<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/primary"
  tools:context=".ChangePassActivity">

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="background"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/img_plane_background" />

  <ImageButton
    android:id="@+id/back"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="25dp"
    android:layout_marginTop="25dp"
    android:background="@android:color/transparent"
    android:contentDescription="back"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/ic_back" />

  <View
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="550dp"
    android:background="@drawable/shape_rounded_container_top_20_fff"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:text="@string/change_pass_title"
    android:textColor="@color/white"
    android:textSize="35sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/container"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/oldPassContainer"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="350dp"
    android:layout_height="50dp"
    android:layout_marginTop="40dp"
    android:hint="@string/old_pass"
    app:endIconMode="password_toggle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/container"
    app:startIconDrawable="@drawable/ic_password"
    app:startIconTint="@color/input">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/oldPassInput"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:paddingHorizontal="15dp"
      android:paddingVertical="5dp"
      android:textSize="16sp" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/newPassContainer"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="350dp"
    android:layout_height="50dp"
    android:layout_marginTop="25dp"
    android:hint="@string/new_pass"
    app:endIconMode="password_toggle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/oldPassContainer"
    app:startIconDrawable="@drawable/ic_password"
    app:startIconTint="@color/input">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/newPassInput"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:paddingHorizontal="15dp"
      android:paddingVertical="5dp"
      android:textSize="16sp" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/newRePassContainer"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="350dp"
    android:layout_height="50dp"
    android:layout_marginTop="25dp"
    android:hint="@string/re_new_pass"
    app:endIconMode="password_toggle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/newPassContainer"
    app:startIconDrawable="@drawable/ic_password"
    app:startIconTint="@color/input">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/newRePassInput"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:paddingHorizontal="15dp"
      android:paddingVertical="5dp"
      android:textSize="16sp" />

  </com.google.android.material.textfield.TextInputLayout>

  <Button
    android:id="@+id/submit"
    android:layout_width="350dp"
    android:layout_height="50dp"
    android:layout_marginTop="50dp"
    android:text="@string/change_pass_title"
    android:textAllCaps="false"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/newRePassContainer" />


</androidx.constraintlayout.widget.ConstraintLayout>